<resources>
    <string name="app_name">微分销专家</string>
    <string name="toast_message">消息提醒</string>
    <string name="register_immediately">立即注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_name">真实姓名</string>
    <string name="name">姓名:</string>
    <string name="pwd">密码</string>
    <string name="create_your_account">创建您的账户</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="code">验证码</string>
    <string name="input_code">请输入你的验证码</string>
    <string name="id_cd">身份证</string>
    <string name="email">邮箱</string>
    <string name="phone_number">11位手机号</string>
    <string name="register_content1">点击注册,&#160;&#160;即表示同意&#160;《</string>
    <string name="register_content2">象谷微分销系统服务协议</string>
    <string name="register_content3">》</string>
    <string name="register_content4">点击注册?&#160;&#160;&#160;</string>
    <string name="register_content5">立即登录</string>
    <string name="xgw">购买微分销</string>
    <string name="order">我的订单</string>
    <string name="grow">成长记录</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="personal_center">个人中心</string>
    <string name="empty_cache">清理缓存</string>
    <string name="invite_friends">推荐给朋友</string>
    <string name="feedback">意见反馈</string>
    <string name="message_setting">消息设置</string>
    <string name="check_updates">版本号</string>
    <string name="join_us">关于我们</string>
    <string name="service_agreement">服务协议</string>
    <string name="password_modification">密码修改</string>
    <string name="image_enhancement">图像修改</string>
    <string name="qq">QQ账号</string>
    <string name="weixin">微信账号</string>
    <string name="zhifubao">支付宝账号</string>
    <string name="yhk">银行卡账号</string>
    <string name="exit_login">退出登录</string>
    <string name="password_reset">密码重置</string>
    <string name="input_phone">请输入手机号</string>
    <string name="complete">完成</string>
    <string name="application_withdrawal">申请提现</string>
    <string name="my_balance">我的余额:</string>
    <string name="present_manner">选择提现方式</string>
    <string name="zfb">支付宝</string>
    <string name="wxzf">微支付</string>
    <string name="qqzf">QQ支付</string>
    <string name="yhkzf">银行卡支付</string>
    <string name="cash_withdrawal_amount">请输入提现的金额</string>
    <string name="commint">提交</string>
    <string name="number">件数</string>
    <string name="total">合计:</string>
    <string name="determine">确定</string>
    <string name="xg_wfx">象谷微分销系统</string>
    <string name="price">价格</string>
    <string name="become_agent">成为代理</string>
    <string name="agent_level">代理等级:</string>
    <string name="agent">代理:</string>
    <string name="order_no">订单号:</string>
    <string name="order_status">订单状态:</string>
    <string name="real_payment">实付款</string>
    <string name="not_certified">未认证</string>
    <string name="immediate_authentication">\?立即认证</string>
    <string name="click_become_agent">点击成为代理</string>
    <string name="recommended_person">推荐人:</string>
    <string name="total_sales">销售总额:</string>
    <string name="total_sale">销售额</string>
    <string name="perpole_number">人数</string>
    <string name="ids">ID:</string>
    <string name="my_tream">我的团队</string>
    <string name="my_performance">我的业绩</string>
    <string name="application_award">申请奖励</string>
    <string name="consignee">收货人:</string>
    <string name="purchase">已购:</string>
    <string name="tb_munion_tip_download_prefix">正在下载:</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载: </string>
    <string name="umeng_common_pause_notification_prefix">暂停: </string>
    <string name="umeng_common_start_download_notification">正在下载应用</string>
    <string name="umeng_common_start_patch_notification">正在更新安装包</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_common_download_finish">下载完成，请点击安装</string>
    <string name="umeng_common_patch_finish">更新完成，请点击安装</string>
    <string name="umeng_common_silent_download_finish">新版本已经准备好，请点击安装</string>
    <string name="umeng_common_icon">icon</string>
    <string name="MBreak_Network">未联网</string>
    <string name="UMUpdateTitle">发现新版本</string>
    <string name="UMNewVersion">最新版本: </string>
    <string name="UMUpdateContent">更新内容</string>
    <string name="UMUpdateSize">仅需要下载:</string>
    <string name="UMTargetSize">新版本大小:</string>
    <string name="UMGprsCondition">（提示：非WIFI环境）</string>
    <string name="UMUpdateNow">立即更新</string>
    <string name="UMAppUpdate">应用更新</string>
    <string name="UMNotNow">以后再说</string>
    <string name="UMIgnore">忽略该版</string>
    <string name="UMToast_IsUpdating">正在更新中....</string>
    <string name="UMDialog_InstallAPK">最新版本已下载，是否安装？</string>
</resources>
