<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    >
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c1184ee"
        >
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fanhuiwhite"
            android:padding="@dimen/dp15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/application_withdrawal"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74px"
        android:layout_marginLeft="140px"
        android:text="@string/my_balance"
        android:textSize="@dimen/sp18"
        />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="73px"
        android:layout_marginLeft="140px"
        android:layout_marginRight="140px"
        android:layout_marginTop="15px"
        android:paddingLeft="60px"
        android:inputType="number"
        android:hint="@string/cash_withdrawal_amount"
        android:textSize="@dimen/sp14"
        android:singleLine="true"
        android:background="@drawable/login_line_bround"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15px"
        android:layout_marginLeft="140px"
        android:text="@string/present_manner"
        android:textSize="@dimen/sp18"
        />
    <com.zhy.autolayout.AutoLinearLayout
    android:layout_width="match_parent"
    android:layout_height="77px"
    android:layout_marginTop="50px"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginLeft="140px"
    android:layout_marginRight="140px"
    android:background="@drawable/login_line_bround"
    >
    <ImageView
        android:id="@+id/iv_zfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:src="@drawable/application_withdrawal_selector"
        />
    <TextView
        android:id="@+id/tv_zfb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="66px"
        android:text="@string/zfb"
        />
</com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="77px"
        android:layout_marginTop="20px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="140px"
        android:layout_marginRight="140px"
        android:background="@drawable/login_line_bround"
        >
        <ImageView
            android:id="@+id/iv_wzf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:src="@drawable/application_withdrawal_selector"
            />
        <TextView
            android:id="@+id/tv_wzf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66px"
            android:text="@string/wxzf"
            />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="77px"
        android:layout_marginTop="20px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="140px"
        android:layout_marginRight="140px"
        android:background="@drawable/login_line_bround"
        >
        <ImageView
            android:id="@+id/iv_qqzf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:src="@drawable/application_withdrawal_selector"
            />
        <TextView
            android:id="@+id/tv_qqzf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66px"
            android:text="@string/qqzf"
            />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="77px"
        android:layout_marginTop="20px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="140px"
        android:layout_marginRight="140px"
        android:background="@drawable/login_line_bround"
        >
        <ImageView
            android:id="@+id/iv_yhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:src="@drawable/application_withdrawal_selector"
            />
        <TextView
            android:id="@+id/tv_yhk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="66px"
            android:text="@string/yhkzf"
            />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.app.sxgwma.ui.UIButton
        android:id="@+id/btn_commint"
        android:layout_width="match_parent"
        android:layout_height="65px"
        android:layout_marginTop="95px"
        android:layout_marginRight="160px"
        android:layout_marginLeft="160px"
        android:orientation="vertical"
        android:text="@string/commint"
        android:textColor="@color/white"
        android:textSize="@dimen/sp18"
        android:background="@drawable/login_bround"
        />
</com.zhy.autolayout.AutoLinearLayout>