<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400px">
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64px"
        android:orientation="horizontal"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/order_no"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_marginLeft="28px"
          android:layout_marginBottom="12px"
          />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="12px"
            />
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c999999"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        />
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="263px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="197px"
            android:layout_height="197px"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="94px"
            android:background="@drawable/xge_shape"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/become_agent_logo"
                />
        </com.zhy.autolayout.AutoLinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="99px"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xg_wfx"
                android:id="@+id/tv_wfx"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="73px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/tv_price"
                android:layout_below="@+id/tv_wfx"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/ce3c19"
                android:layout_marginTop="87px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:id="@+id/tv_number"
                android:layout_alignTop="@+id/tv_price"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/ce3c19"
                android:layout_marginRight="72px" />
        </RelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c999999"
        />
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70px"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/real_payment"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="47px"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_alignTop="@+id/tv_price"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="59px"
            android:textColor="@color/ce3c19" />
    </com.zhy.autolayout.AutoRelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c999999"
        />
</com.zhy.autolayout.AutoLinearLayout>