<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="240px">
 <com.zhy.autolayout.AutoLinearLayout
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:layout_height="239px"
     android:gravity="center_vertical"
     >
  <ImageView
      android:id="@+id/iv_becom_agent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="15px"
      android:src="@drawable/application_withdrawal_selector"
      />
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="197px"
         android:layout_height="197px"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="27px"
         android:background="@drawable/xge_shape"
         >
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@mipmap/become_agent_logo"
             />
     </com.zhy.autolayout.AutoLinearLayout>
     <com.zhy.autolayout.AutoLinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="33px"
         android:orientation="vertical"
         >
          <TextView
              android:id="@+id/tv_xgwfx"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/xg_wfx"
              android:layout_marginTop="36px"
              />
         <com.zhy.autolayout.AutoLinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="22px"
             android:orientation="horizontal"
             >
             <TextView
                 android:id="@+id/tv_agent_level"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/agent_level"
                 />
             <TextView
                 android:id="@+id/tv_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/number"
                 android:layout_marginLeft="20px"
                 />
         </com.zhy.autolayout.AutoLinearLayout>

         <com.zhy.autolayout.AutoLinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="52px"
             android:orientation="horizontal"
             >
             <TextView
                 android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/price"
                 />
             <TextView
                 android:id="@+id/tv_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/total"
                 android:layout_marginLeft="50px"
                 />
         </com.zhy.autolayout.AutoLinearLayout>
     </com.zhy.autolayout.AutoLinearLayout>
 </com.zhy.autolayout.AutoLinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/c999999"
        />
</com.zhy.autolayout.AutoLinearLayout>