<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    />
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark_transparent"
        >
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_vertical"
       android:layout_marginLeft="20px"
       android:text="@string/number"
       android:textSize="@dimen/sp18"
       android:textColor="@color/white"
       />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total"
            android:textSize="@dimen/sp18"
            android:textColor="@color/ce3c19"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="140px"
            android:layout_height="60px"
            android:textColor="@color/white"
            android:text="@string/determine"
            android:textSize="@dimen/sp16"
            android:layout_marginRight="20px"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/login_bround"
            />
    </android.support.v7.widget.Toolbar>
</com.zhy.autolayout.AutoLinearLayout>