<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/background"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c1184ee"
        >
        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/fanhuiwhite"
            android:padding="@dimen/dp15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password_reset"
            android:layout_gravity="center_horizontal"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210px"
        android:text="@string/input_phone"
        android:textSize="@dimen/sp16"
        />
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="89px"
        android:layout_marginTop="48px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="160px"
        android:layout_marginRight="160px"
        android:background="@drawable/login_line_bround"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:src="@mipmap/shouji"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/shuxian"
            android:layout_marginLeft="30px"
            />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30px"
            android:inputType="textPersonName"
            android:hint="@string/phone_number"
            android:textSize="@dimen/sp14"
            android:singleLine="true"
            android:background="@color/transparent"
            />
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="89px"
        android:layout_marginTop="8px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="160px"
        android:layout_marginRight="160px"
        android:background="@drawable/login_line_bround"
        >
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30px"
            android:inputType="textPersonName"
            android:hint="@string/input_code"
            android:textSize="@dimen/sp14"
            android:singleLine="true"
            android:layout_weight="1"
            android:background="@color/transparent"
            />
        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/ly_code"
            android:layout_width="wrap_content"
            android:background="@mipmap/code"
            android:gravity="center"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="@color/white"
                />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="89px"
        android:layout_marginTop="8px"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginLeft="160px"
        android:layout_marginRight="160px"
        android:background="@drawable/login_line_bround"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="33px"
            android:src="@mipmap/mima"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/shuxian"
            android:layout_marginLeft="30px"
            />
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30px"
            android:inputType="textPersonName"
            android:hint="@string/pwd"
            android:textSize="@dimen/sp14"
            android:singleLine="true"
            android:background="@color/transparent"
            />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.app.sxgwma.ui.UIButton
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="94px"
        android:layout_marginTop="52px"
        android:layout_marginLeft="160px"
        android:layout_marginRight="160px"
        android:text="@string/complete"
        android:textSize="@dimen/sp18"
        android:textColor="@color/white"
        android:background="@drawable/register_immediately_bround"
        android:layout_gravity="center_horizontal"
        />
</com.zhy.autolayout.AutoLinearLayout>